--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -30,3 +30,12 @@ li a:hover {
 .adminButton {
     float: right;
 }
+
+#footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #333;
+    text-align: center;
+}
