In process of making create pages

--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    background: url("../res/pep_boys_logo.jpg");
+    /* background: url("../res/pep_boys_logo.jpg"); */
 }
 
 ul {
