--- a/frontend/styles/style3.css
+++ b/frontend/styles/style3.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Righteous');
+
 body {
     margin: 0;
     /* background: url("../res/pep_boys_logo.jpg"); */
