--- a/backend/styles/style2.css
+++ b/backend/styles/style2.css
@@ -2,7 +2,7 @@
 
 body {
     margin: 0;
-    /* background: url("../res/pep_boys_logo.jpg"); */
+    background: url("../res/pep_boys_logo.jpg");
 }
 
 ul {
