--- a/backend/styles/style3.css
+++ b/backend/styles/style3.css
@@ -45,6 +45,9 @@ li a {
 /* Change the link color to #111 (black) on hover */
 li a:hover {
     background-color: #111;
+    
+    background-image: url(../res/thomas2.png);
+    background-size: contain;
 }
 
 .active {
